# patchbay

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  compose.yml  pyproject.toml
config/: api_keys.example.yml  config.example.yml  config.yml  presets.example.yml  services.example.yml
docs/: API.md  AUTH.md
patchbay/: auth.py  config.py  health.py  keygen.py  main.py  models.py  presets.py
patchbay/backends/: base.py  compose.py  docker.py  systemd.py  util.py
patchbay/routers/: auth.py  presets.py  services.py  system.py
patchbay/templates/: base.html  index.html
patchbay/templates/components/: footer.html  header.html  presets.html  service.html
specs/: auth.md
tests/: conftest.py  test_auth.py  test_backends.py  test_compose_backend.py  test_config.py  test_health.py  test_keygen.py  test_presets.py  test_services.py
